Add JPMS arguments to surefire plugin in Java9+